@@ -680,6 +680,10 @@ test var-14.1 {array names syntax} -body {
     array names foo bar baz snafu
 } -returnCodes 1 -match glob -result *
 
+test var-14.2 {array names -glob} -body {
+    array names tcl_platform -glob os
+} -returnCodes 0 -match exact -result os
+
 test var-15.1 {segfault in [unset], [Bug 735335]} {
     proc A { name } {
 	upvar $name var
